# aero

./: README.md
aero/: CMakeLists.txt  package.xml
aero_bringup/: CMakeLists.txt  package.xml
aero_bringup/config/: diagnostics.yaml
aero_bringup/launch/: aero.launch  aero_camera_pair.launch  aero_cameras.launch  aero_common.launch  aero_diagnostics.launch  aero_gazebo.launch  gazebo_aero.launch  joystick_teleop_aero.launch  keyboard_teleop_aero.launch  robot_aero.launch
aero_config/: CMakeLists.txt  package.xml
aero_config/X11/: xorg.conf
aero_config/network/: dhclient.conf  interfaces
aero_config/udev/: 90-aero-net.rules
aero_control/: CMakeLists.txt  LICENSE.txt  laser_filter_plugins.xml  package.xml
aero_control/config/: aero_control.yaml  aero_gazebo_control.yaml  laserscan_filter.yaml
aero_control/include/aero_control/: laser_shutter_filter.h  laser_small_object_filter.h
aero_control/launch/: aero_control.launch
aero_control/src/: laser_shutter_filter.cpp  laser_small_object_filter.cpp
aero_description/: CMakeLists.txt  package.xml
aero_description/launch/: aero_base.launch
aero_description/meshes/: base_collision.STL  base_collision.dae
aero_description/robots/: aero_base.urdf  aero_base.urdf.xacro
aero_description/urdf/: base.urdf.xacro  camera_boom.urdf.xacro  husky.urdf.xacro  manta_camera.urdf.xacro  materials.urdf.xacro  parts.urdf.xacro  ros_control.gazebo.xacro  sick_laser.gazebo.xacro  sick_laser.urdf.xacro  stereo_camera_pair.urdf.xacro  wheel.urdf.xacro
aero_gazebo/: CMakeLists.txt  aero_hw_sim_plugins.xml  package.xml
aero_gazebo/launch/: aero_base_world.launch
aero_gazebo/models/aero_heightmap/: model.config  model.sdf
aero_gazebo/src/: aero_hw_sim.cpp
aero_gazebo/vrc_heightmap_4/: model.sdf
aero_gazebo/worlds/: README.txt  aero.world
aero_hw/: CMakeLists.txt  laser_filter_plugins.xml  package.xml
aero_hw/arduino/: arduino.ino
aero_hw/config/: laserscan_filter.yaml
aero_hw/include/aero_hw/: aero_base_hw.h  laser_shutter_filter.h
aero_hw/launch/: arm.launch  robot.launch
aero_hw/src/: aero_arduino_controller_node.cpp  aero_base_hw_node.cpp  init_camera_boom.py  laser_shutter_filter.cpp
aero_ikfast_jaco/: CMakeLists.txt  aero_jaco_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
aero_ikfast_jaco/src/: aero_jaco_ikfast_moveit_plugin.cpp  aero_jaco_ikfast_solver.cpp  ikfast61_jaco.cpp
aero_moveit/: .setup_assistant  CMakeLists.txt  package.xml
aero_moveit/config/: aero.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sensors.yaml
aero_moveit/launch/: aero_moveit_controller_manager.launch.xml  aero_moveit_sensor_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
aero_moveit_config/: .setup_assistant  package.xml
aero_moveit_config/config/: aero.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
aero_moveit_config/launch/: default_warehouse_db.launch  demo.launch  move_group.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
aero_udev/: CMakeLists.txt  package.xml
aero_util/: CMakeLists.txt  package.xml
aero_util/src/: bag.py  camera_views.py  config_cameras.py  laser_delay.py  lower_cam_calibration.sh  upper_cam_calibration.sh
