<?xml version="1.0"?>
<package>
  <name>aero</name>
  <version>0.0.0</version>
  <description>Metapackage for packages related to the AERO platform</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>aero_description</run_depend>
  <run_depend>aero_control</run_depend>
  <run_depend>aero_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>