<?xml version="1.0"?>
<package>
  <name>aero_bringup</name>
  <version>0.0.0</version>
  <description>A collection of launch files for starting aero</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>aero_description</run_depend>
  <run_depend>aero_control</run_depend>
  <run_depend>aero_gazebo</run_depend>
  <run_depend>ros_lm_sensors</run_depend>


  <export>
  </export>
</package>