<?xml version="1.0"?>
<package>
  <name>aero_control</name>
  <version>0.0.0</version>
  <description>The aero_control package</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>controller_manager</run_depend>

  <export>
  </export>
</package>