<?xml version="1.0"?>
<package>
  <name>aero_gazebo</name>
  <version>1.0.0</version>
  <description>aero_gazebo</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>
  <license></license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>aero_description</run_depend>

  <export>
  </export>
</package>