<?xml version="1.0"?>
<package>
  <name>aero_gazebo</name>
  <version>1.0.0</version>
  <description>aero_gazebo</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>
  <license></license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>gazebo_ros</build_depend> 
  <build_depend>controller_manager</build_depend> 
  <build_depend>pluginlib</build_depend> 
  <build_depend>transmission_interface</build_depend> 
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>gazebo_ros_control</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>aero_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>gazebo_ros_control</run_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/aero_hw_sim_plugins.xml"/>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>