<?xml version="1.0"?>
<package>
  <name>aero_hw</name>
  <version>0.0.0</version>
  <description>The aero_hw package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>river_ros_util</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>device_driver_base</build_depend>
  <build_depend>roboteq_driver</build_depend>
  <build_depend>safety_interface</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>river_ros_util</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>device_driver_base</run_depend>
  <run_depend>roboteq_driver</run_depend>
  <run_depend>safety_interface</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>pluginlib</run_depend>


  <export>
  </export>
</package>